--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">WeatherApp</string>
+    <string name="main_screen_lable">Home</string>
+    <string name="detail_screen_lable">article details</string>
+    <string name="bookmarks_screen_lable">Bookmarks</string>
+    <string name="settings_screen_lable">Settings</string>
+    <string name="splash_screen_lable">Splash</string>
+
 </resources>
