--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -10,4 +10,5 @@
     <string name="home">Home</string>
     <string name="book_marked">BookMarked</string>
     <string name="settings_screen">Settings</string>
+    <string name="toolbar_title">Article app</string>
 </resources>
