--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">ArticlesApp</string>
     <string name="main_screen_lable">Home</string>
     <string name="detail_screen_lable">article details</string>
     <string name="bookmarks_screen_lable">Bookmarks</string>
