--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">ArticlesApp</string>
-    <string name="main_screen_lable">Home</string>
-    <string name="detail_screen_lable">article details</string>
-    <string name="bookmarks_screen_lable">Bookmarks</string>
-    <string name="settings_screen_lable">Settings</string>
+    <string name="main_screen_lable">الرئيسة</string>
+    <string name="detail_screen_lable">التفاصيل</string>
+    <string name="bookmarks_screen_lable">المحفوظة</string>
+    <string name="settings_screen_lable">الاعدادات</string>
     <string name="splash_screen_lable">Splash</string>
     <string name="tasks_header_image_content_description">article header description</string>
     <string name="navigation_view_header_title">Articles</string>
-    <string name="home">Home</string>
-    <string name="book_marked">BookMarked</string>
-    <string name="settings_screen">Settings</string>
+    <string name="home">الرئيسة</string>
+    <string name="book_marked">المحفوظة</string>
+    <string name="settings_screen">الاعدادات</string>
     <string name="toolbar_title">Article app</string>
 </resources>
